# proton-pack

./: .coveragerc  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/actions/: proton_pack.yaml
.github/actions/proton_pack/: action.yaml
.github/workflows/: analyzer.yaml  ci.yaml
.github/worksflows/: ci.yaml
src/proton_pack/: action.py  cli_printer.py  main.py  markdown_printer.py  pretty_printer.py
src/proton_pack/migration/: analyzer.py  parser.py
src/proton_pack/migration/rules/: check_for_not_null_added_without_default.py  (+5 more)
src/proton_pack/model/: line.py
test-app/: Makefile  README.md  docker-compose.yml
test-app/ghostbusters-wiki/: Dockerfile  README.md  entrypoint.sh  pyproject.toml  requirements.txt
test-app/ghostbusters-wiki/ghostbusters_wiki/: __init__.py
test-app/ghostbusters-wiki/seeds/: __init__.py
test-app/sw-wiki/: README.md  pyproject.toml
test-app/sw-wiki/sw_wiki/: __init__.py
test/tests/migration/: test_analyzer.py  test_parser.py
tests/tests/: test_cli_printer.py  test_markdown_printer.py  test_pretty_printer.py
tests/tests/migration/: test_action.py  test_parser.py
user-tests/version-1/: ai-user-test-1.sql  ai-user-test-2.sql  manual-user-test-1.sql  tool-user-test-2.sql  tool-user-test.sql  user-test-results-1.md  user-test-results-2.md  user-test-results.md  user-test.sql  user-test.txt
user-tests/version-2/: no_tool_user_test_2.sql  results_no_tool_user_test_2.md  results_no_tool_user_test_2.txt  results_tool_user_test_2.md  results_tool_user_test_2.txt  tool_user_test_2.sql  user_test_2.sql
(+26 files in other folders)
