[project]
name = "proton-pack"
version = "0.1.0"
description = "Databse Migration Safety Analyzer"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "sqlglot>=23",
    "rich>=14"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0"
]

[project.scripts]
proton-pack = "proton_pack.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=term-missing"
testpaths = [
    "tests"
]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/proton_pack/main.py",
    "src/proton_pack/pretty_printer.py"
]